[package]
name = "peerid2pubkey"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bs58 = "0.4.0"
hex = "0.4.3"
libp2p = "0.44.0"
multihash = { version = "0.16.2", default-features = false, features = ["std", "multihash-impl", "identity", "sha2"] }

[features]
default = ['std']
std = [
	"bs58/std",
]
